--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <!-- Linking Css -->
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- End Css -->
 
   </head>
 
   <body>
 
-      
+
 
 
 
